force-app/main/default/objects/clofor_com_cfs__OrganizationPerformance__c/clofor_com_cfs__OrganizationPerformance__c.object-meta.xml
<CustomObject>
    <label>ORG Performance</label>
    <nameField>
        <displayFormat>OP-{000000}</displayFormat>
        <label>ORGANIZATION PERFORMANCE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ORG Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>