force-app/main/default/objects/clofor_com_cfs__OrganizationPerformance__c/fields/clofor_com_cfs__AccumulatedPerformanceFromIndividual__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccumulatedPerformanceFromIndividual__c</fullName>
    <label>ACCUMULATED PERFORMANCE FROM INDIVIDUAL</label>
    <summarizedField>clofor_com_cfs__IndividualPerformance__c.clofor_com_cfs__AccumulatedAnnualPerformance__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__IndividualPerformance__c.clofor_com_cfs__OrganizationPerformanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>