force-app/main/default/objects/clofor_com_cfs__OrganizationPerformance__c/fields/clofor_com_cfs__AnnualCrchievement__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AnnualCrchievement__c</fullName>
    <formula>clofor_com_cfs__AccumulatedPerformanceFromIndividual__c/  clofor_com_cfs__AnnualTarget__c</formula>
    <label>ANNUAL ACHIEVEMENT(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>