force-app/main/default/objects/clofor_com_cfs__OrganizationPerformance__c/fields/clofor_com_cfs__MonthlyTarget__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MonthlyTarget__c</fullName>
    <formula>clofor_com_cfs__OranizationalTargetID__r.clofor_com_cfs__MonthlyTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MONTHLY TARGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>