force-app/main/default/objects/clofor_com_cfs__OrganizationPerformance__c/fields/clofor_com_cfs__OrganizationPerformanceName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OrganizationPerformanceName__c</fullName>
    <label>ORGANIZATION PERFORMANCE NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>