force-app/main/default/objects/clofor_com_cfs__OrganizationPerformance__c/fields/clofor_com_cfs__ParentOrganizationalPerformanceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentOrganizationalPerformanceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT ORGANIZATIONAL PERFORMANCE ID</label>
    <referenceTo>clofor_com_cfs__OrganizationPerformance__c</referenceTo>
    <relationshipLabel>ORGANIZATION PERFORMANCE</relationshipLabel>
    <relationshipName>ParentOrganizationalPerformance</relationshipName>
    <type>Lookup</type>
</CustomField>