force-app/main/default/objects/clofor_com_cfs__OrganizationPerformance__c/fields/clofor_com_cfs__PerformanceDataSource__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PerformanceDataSource__c</fullName>
    <label>PERFORMANCE DATA SOURCE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>