force-app/main/default/objects/clofor_com_cfs__OrganizationPerformance__c/fields/clofor_com_cfs__SumPerformanceFromChildOrg__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SumPerformanceFromChildOrg__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SumPerformanceFromChildOrg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>