force-app/main/default/objects/clofor_com_cfs__OrganizationPerformance__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__OrganizationPerformanceName__c</columns>
    <columns>clofor_com_cfs__OranizationalTargetID__c</columns>
    <columns>clofor_com_cfs__ParentOrganizationalPerformanceID__c</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__AnnualTarget__c</columns>
    <columns>clofor_com_cfs__KPIID__c</columns>
    <columns>clofor_com_cfs__KPIName__c</columns>
    <columns>clofor_com_cfs__AccumulatedAnnualPerformance__c</columns>
    <columns>clofor_com_cfs__AnnualCrchievement__c</columns>
    <columns>clofor_com_cfs__AccumulatedPerformanceFromIndividual__c</columns>
    <columns>clofor_com_cfs__HierarchyLevel__c</columns>
    <columns>clofor_com_cfs__PerformanceMeasurementUnit__c</columns>
    <columns>clofor_com_cfs__AnnualPerformanceStartDate__c</columns>
    <columns>clofor_com_cfs__AnnualPerformanceEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>